@@ -17252,8 +17252,15 @@ static void ExecutiveDraw(Block * block)
                 if((nChar--) > 0)
                   TextDrawChar(G, ' ');
                 while(*c)
-                  if((nChar--) > 0)
+                  if((nChar--) > 0){
+		    /* allow color encoding for names */
+		    if((*c == '\\') && (*(c + 1)) && (*(c + 2)) && (*(c + 3))) {
+		      TextSetColor3f(G, (*(c + 1) - '0') / 9.0F, (*(c + 2) - '0') / 9.0F,
+				     (*(c + 3) - '0') / 9.0F);
+		      c += 4;
+		    }
                     TextDrawChar(G, *(c++));
+		  }
                   else
                     break;
               }
